@@ -1,11 +1,11 @@
 
-AHIDB_FileSaveFormat	.EQU	AHIDB_UserBase+0
+.SET AHIDB_FileSaveFormat, AHIDB_UserBase+0
 
-FORMAT_8SVX		.EQU	0
-FORMAT_AIFF		.EQU	1
-FORMAT_AIFC		.EQU	2
-FORMAT_S16		.EQU	3
-FORMAT_WAVE		.EQU	4
+.SET FORMAT_8SVX, 0
+.SET FORMAT_AIFF, 1
+.SET FORMAT_AIFC, 2
+.SET FORMAT_S16, 3
+.SET FORMAT_WAVE, 4
 
 	FORM_START	AHIM
 
@@ -284,6 +284,6 @@ FORMAT_WAVE		.EQU	4
 	CHUNK_END
 
 	FORM_END
-
+	.balign	4,0
 	.END
 	
